--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2013-04-08 07:02+0000\n"
 "Last-Translator: David Kovář <davidkov@gmx.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:37+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -92,8 +92,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Importovat úkoly z přímých vzkazů"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -107,8 +107,8 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Označit úkoly v GTG chybovými štítky"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
-msgstr ""
+msgid "Tag your GTG tasks with the project targeted by the bug"
+msgstr "Označit úkoly v GTG štítkem podle projektu spojeného s chybou"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1057,7 +1057,7 @@ msgstr "Vložit poznámku aplikace Tomboy"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1072,7 +1072,7 @@ msgstr "Tato poznámka neexistuje. Chcete vytvořit novou?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2516,9 +2516,6 @@ msgstr[2] "Za %(days)d dní"
 #~ msgid "_Set start date"
 #~ msgstr "_Nastavit datum zahájení"
 
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Importovat úkoly z přímých vzkazů"
-
 #~ msgid "Identi.ca"
 #~ msgstr "Identi.ca"
 
@@ -2527,6 +2524,3 @@ msgstr[2] "Za %(days)d dní"
 
 #~ msgid "Import tasks from @ replies "
 #~ msgstr "Importovat uĺohy z @ odpovědí "
-
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr "Označit úkoly v GTG štítkem podle projektu spojeného s chybou"
