--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2013-01-20 10:45+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -92,8 +92,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Importar tareas de mensajes directos"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -107,8 +107,9 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Asignar las etiquetas de error a tus tareas en GTG"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
+msgid "Tag your GTG tasks with the project targeted by the bug"
 msgstr ""
+"Etiqueta tus tareas GTG con el proyecto al que está dirigido el error"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1054,7 +1055,7 @@ msgstr "Añadir una nota a Tomboy"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1069,7 +1070,7 @@ msgstr "Esa nota no existe. ¿Quiere crear una nueva?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2342,9 +2343,6 @@ msgstr[1] "En %(days)d días"
 #~ msgid "Import tasks from @ replies "
 #~ msgstr "Importar tareas de @menciones "
 
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Importar tareas de mensajes directos"
-
 #~ msgid "_clear start date"
 #~ msgstr "_borrar fecha de inicio"
 
@@ -2365,7 +2363,3 @@ msgstr[1] "En %(days)d días"
 
 #~ msgid "Imports your twitter  messages into your GTG "
 #~ msgstr "Importa tus mensajes twitter a GTG "
-
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr ""
-#~ "Etiqueta tus tareas GTG con el proyecto al que está dirigido el error"
