--- a/po/hr.po
+++ b/po/hr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2011-09-19 16:56+0000\n"
 "Last-Translator: Saša Teković <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -93,8 +93,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Uvoz zadataka iz izravnih poruka"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -108,8 +108,8 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Označite svoje GTG zadatke s oznakama grešaka"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
-msgstr ""
+msgid "Tag your GTG tasks with the project targeted by the bug"
+msgstr "Označite svoj GTG zadatke s projektom na kojeg ciljaju greške"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1025,7 +1025,7 @@ msgstr "Dodaj Tomboy bilješku"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1040,7 +1040,7 @@ msgstr "Ta bilješka ne postoji. Želite li stvoriti novu?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2393,17 +2393,11 @@ msgstr[2] "Za %(days)d dana"
 #~ "dana&quot; koju ste dodijelili zadacima koje biste htjeli jednom obaviti, "
 #~ "ali nisu baš hitni."
 
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Uvoz zadataka iz izravnih poruka"
-
 #~ msgid "Import tasks from your tweets"
 #~ msgstr "Uvoz zadataka iz vaših tweetova"
 
 #~ msgid "Import tasks from @ replies "
 #~ msgstr "Uvoz zadataka iz @ odgovora "
-
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr "Označite svoj GTG zadatke s projektom na kojeg ciljaju greške"
 
 #~ msgid "Syncing is <span color=\"red\">disabled</span>"
 #~ msgstr "Sinkronizacija je <span color=\"red\">onemogućena</span>"
