--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2012-04-13 15:32+0000\n"
 "Last-Translator: Hanssen <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:37+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -92,8 +92,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Taken importeren van directe berichten"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -107,8 +107,8 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Label uw GTG-taken met de bug-labels"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
-msgstr ""
+msgid "Tag your GTG tasks with the project targeted by the bug"
+msgstr "Label uw GTG-taken met het project dat door de bug aangetast wordt"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1019,7 +1019,7 @@ msgstr "Tomboy-notitie toevoegen"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1034,7 +1034,7 @@ msgstr "Deze notitie bestaat niet. Wilt u een nieuwe aanmaken?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2252,9 +2252,6 @@ msgstr[1] "over %(days)d dagen"
 #~ "Attributen die op deze manier zijn toegevoegd, worden wel toegepast, maar "
 #~ "niet weergegeven in de titel."
 
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr "Label uw GTG-taken met het project dat door de bug aangetast wordt"
-
 #~ msgid "_clear due date"
 #~ msgstr "_wis datum deadline"
 
@@ -2281,9 +2278,6 @@ msgstr[1] "over %(days)d dagen"
 
 #~ msgid "Imports your twitter  messages into your GTG "
 #~ msgstr "Importeert uw twitterberichten naar uw GTG "
-
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Taken importeren van directe berichten"
 
 #~ msgid "Import tasks from your tweets"
 #~ msgstr "Taken importeren van uw tweets"
