--- a/po/pl.po
+++ b/po/pl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2013-03-17 22:15+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: Polish <ponton@jabster.pl>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -94,8 +94,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Importuj zadania z bezpośrednich wiadomości"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -109,8 +109,8 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Oznacz zadania GTG znacznikami błędu"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
-msgstr ""
+msgid "Tag your GTG tasks with the project targeted by the bug"
+msgstr "Oznacz swoje zadania GTG projektem związanym z błędem"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1060,7 +1060,7 @@ msgstr "Dodaj notatkę Tomboy"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1075,7 +1075,7 @@ msgstr "Ta notatka nie istnieje. Czy utworzyć nową?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2410,9 +2410,6 @@ msgstr[2] "W ciągu %(days)d dni"
 #~ msgid "Import tasks from @ replies "
 #~ msgstr "Importuj zadania z odpowiedzi "
 
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Importuj zadania z bezpośrednich wiadomości"
-
 #~ msgid "Import tasks from your tweets"
 #~ msgstr "Importuj zadania z swoich wiadomości"
 
@@ -2474,9 +2471,6 @@ msgstr[2] "W ciągu %(days)d dni"
 #~ "bardzo przydatne jeśli masz znacznik typu &quot;kiedyś&quot;, którego "
 #~ "używasz do oznaczenia zadań które chciałbyś(-aś) wykonać, ale jeszcze nie "
 #~ "teraz."
-
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr "Oznacz swoje zadania GTG projektem związanym z błędem"
 
 #~ msgid "Enter the name of the tag(s) you wish to add:"
 #~ msgstr "Podaj nazwę znacznika, który chcesz dodać:"
