--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-04-27 08:52+0200\n"
+"POT-Creation-Date: 2013-04-28 17:02+0200\n"
 "PO-Revision-Date: 2013-04-27 14:07+0000\n"
 "Last-Translator: Izidor Matušov <izidor.matusov@gmail.com>\n"
 "Language-Team: slovenčina <debian-l10n-slovak@lists.debian.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 1 : (n>=2 && n<=4) ? 2 : 0;\n"
-"X-Launchpad-Export-Date: 2013-04-28 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 "Language: \n"
 "X-POFile-SpellExtra: tasktitle\n"
@@ -95,8 +95,8 @@ msgid ""
 msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
-msgid "Import tasksfrom direct messages"
-msgstr ""
+msgid "Import tasks from direct messages"
+msgstr "Importovať úlohy z priamych správ"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:102
 msgid ""
@@ -110,8 +110,8 @@ msgid "Tag your GTG tasks with the bug tags"
 msgstr "Označiť úlohy GTG značkami chyby"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:116
-msgid "Tag your GTG tasks with the projecttargeted by the bug"
-msgstr ""
+msgid "Tag your GTG tasks with the project targeted by the bug"
+msgstr "Označiť úlohy GTG projektom, ktorému chyba patrí"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -1049,7 +1049,7 @@ msgstr "Pridať poznámku Tomboy"
 #: GTG/plugins/tomboy/tomboy.py:194
 #, python-format
 msgid ""
-"%s seems to be installed on your system, but itdoes not provide a DBus "
+"%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
 
@@ -1064,7 +1064,7 @@ msgstr "Taká poznámka neexistuje. Chcete vytvoriť novú?"
 #: GTG/plugins/tomboy/tomboy.py:276
 msgid ""
 "This Tomboy note                                        does not exist "
-"anymore.Do you want to                                        create it?"
+"anymore. Do you want to                                        create it?"
 msgstr ""
 
 #: GTG/gtg.py:85
@@ -2165,14 +2165,8 @@ msgstr[2] "Za %(days)d dní"
 #~ msgid "Import tasks from @ replies "
 #~ msgstr "Importovať úlohy z @ odpovedí "
 
-#~ msgid "Import tasks from direct messages"
-#~ msgstr "Importovať úlohy z priamych správ"
-
 #~ msgid "Import tasks from your tweets"
 #~ msgstr "Importovať úlohy z tweetov"
-
-#~ msgid "Tag your GTG tasks with the project targeted by the bug"
-#~ msgstr "Označiť úlohy GTG projektom, ktorému chyba patrí"
 
 #~ msgid "Syncing is <span color=\"red\">disabled</span>"
 #~ msgstr "Synchronizácia je <span color=\"red\">vypnutá</span>"
