--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-01-20 10:45+0000\n"
-"Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
+"PO-Revision-Date: 2013-05-12 11:04+0000\n"
+"Last-Translator: Sergio Redondo <sergioredondo@outlook.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
-"X-Generator: Launchpad (build 16580)\n"
+"X-Launchpad-Export-Date: 2013-05-13 05:18+0000\n"
+"X-Generator: Launchpad (build 16614)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -60,7 +60,7 @@ msgstr "Todas las etiquetas"
 msgid ""
 "Just these                                                                   "
 "    tags:"
-msgstr ""
+msgstr "Sólo estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:68
 msgid "Tags to sync"
@@ -75,7 +75,7 @@ msgstr "Todas las tareas"
 msgid ""
 "Tasks with                                                                 "
 "these tags:"
-msgstr ""
+msgstr "Tareas con estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
@@ -100,7 +100,7 @@ msgid ""
 "Import                                                                  "
 "tasks from                                                                  "
 "your tweets"
-msgstr ""
+msgstr "Importar tareas de tus tweets"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:109
 msgid "Tag your GTG tasks with the bug tags"
