--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-05-12 11:04+0000\n"
+"PO-Revision-Date: 2013-05-21 23:21+0000\n"
 "Last-Translator: Sergio Redondo <sergioredondo@outlook.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-05-13 05:18+0000\n"
-"X-Generator: Launchpad (build 16614)\n"
+"X-Launchpad-Export-Date: 2013-05-22 04:38+0000\n"
+"X-Generator: Launchpad (build 16626)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -89,7 +89,7 @@ msgstr "URL del servicio"
 msgid ""
 "Import tasks                                                         from @ "
 "replies "
-msgstr ""
+msgstr "Importar tareas de @ respuestas "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
 msgid "Import tasks from direct messages"
@@ -149,7 +149,7 @@ msgstr ""
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "<b>System</b>"
-msgstr ""
+msgstr "<b>Sistema</b>"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Enable colored backgrounds in the task list"
@@ -194,7 +194,7 @@ msgstr "Preferencias - %s"
 
 #: GTG/gtk/preferences.py:249
 msgid "Warning"
-msgstr ""
+msgstr "Advertencia"
 
 #: GTG/gtk/preferences.py:263
 #, python-format
