--- a/po/fr.po
+++ b/po/fr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-04-24 09:37+0000\n"
+"PO-Revision-Date: 2013-06-02 10:26+0000\n"
 "Last-Translator: Alexandre Germain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
-"X-Generator: Launchpad (build 16580)\n"
+"X-Launchpad-Export-Date: 2013-06-03 06:03+0000\n"
+"X-Generator: Launchpad (build 16660)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -60,7 +60,7 @@ msgstr "Toutes les étiquettes"
 msgid ""
 "Just these                                                                   "
 "    tags:"
-msgstr ""
+msgstr "Seulement ces mots-clés &nbsp:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:68
 msgid "Tags to sync"
@@ -75,7 +75,7 @@ msgstr "Toutes les tâches"
 msgid ""
 "Tasks with                                                                 "
 "these tags:"
-msgstr ""
+msgstr "Tâches avec ces môts-clés &nbsp:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
@@ -100,7 +100,7 @@ msgid ""
 "Import                                                                  "
 "tasks from                                                                  "
 "your tweets"
-msgstr ""
+msgstr "Importer des tâches depuis vos tweets"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:109
 msgid "Tag your GTG tasks with the bug tags"
@@ -144,11 +144,11 @@ msgstr "Démarrer Getting Things GNOME! à chaque démarrage"
 
 #: GTG/gtk/preferences.glade.h:2
 msgid "New Task Shortcut :"
-msgstr ""
+msgstr "Nouveau raccourci vers une tâche &nbsp:"
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "<b>System</b>"
-msgstr ""
+msgstr "<b>Système</b>"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Enable colored backgrounds in the task list"
@@ -193,7 +193,7 @@ msgstr "Préférences - %s"
 
 #: GTG/gtk/preferences.py:249
 msgid "Warning"
-msgstr ""
+msgstr "Avertissement"
 
 #: GTG/gtk/preferences.py:263
 #, python-format
@@ -202,6 +202,9 @@ msgid ""
 "using this key.\n"
 "Please try with a key such as Control, Alt or Shift at the same time."
 msgstr ""
+"Le raccourci « %s » ne peut pas être utilisé parce qu'une saisie avec cette "
+"touche peut devenir impossible.\n"
+"Veuillez essayer avec une touche telle que Ctrl, Alt ou Maj simultanément."
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/browser/taskbrowser.glade.h:25
 #: GTG/gtk/editor/__init__.py:31
@@ -263,7 +266,7 @@ msgstr "Afficher cette étiquette sur la vue de travail"
 
 #: GTG/gtk/browser/__init__.py:53
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Vous pouvez créer, ouvrir et filtrer vos tâches ici"
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
@@ -553,6 +556,8 @@ msgid ""
 "GTG is a personal tasks and TODO-list items organizer for the GNOME desktop "
 "environment."
 msgstr ""
+"GTG est un gestionnaire et un organisateur de tâches personnelles \"à "
+"faire\" (TODO) pour l'environnement de bureau GNOME."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "GTG website"
@@ -574,6 +579,19 @@ msgid ""
 "Getting Things GNOME!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! est un logiciel libre; Vous pouvez le redistribuer "
+"et/ou le modifier dans les termes de la Licence publique générale GNU comme "
+"publiée par la Free Software Foundation; que ce soit dans la version 3 ou "
+"une version postérieure de votre choix.\n"
+"\n"
+"Getting Things GNOME! est distribué dans l'espoir d'être utile, mais SANS "
+"AUCUNE GARANTIE ; sans même la garantie implicite de  qualité marchande ni "
+"même d'être approprié pour un quelconque usage. Veuillez vous référer à la "
+"licence publique générale GNU pour plus de détails.\n"
+"\n"
+"Vous devriez avoir reçu une copie de la GNU GPL avec Getting Things GNOME! ; "
+"sinon, merci d'écrire à la Free Software Foundation, Inc., 51 Franklin "
+"Street, Fifth floor, Boston, MA 02110-1301, USA."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Mark as Not Done"
@@ -593,15 +611,15 @@ msgstr "_Définir Date de Début"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
-msgstr ""
+msgstr "_Aujourd'hui"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:45
 msgid "_Tomorrow"
-msgstr ""
+msgstr "_Demain"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:46
 msgid "Next _Week"
-msgstr ""
+msgstr "_Semaine Prochaine"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:47
 msgid "Next _Month"
@@ -609,15 +627,15 @@ msgstr "_Mois Prochain"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:48
 msgid "Next _Year"
-msgstr ""
+msgstr "A_nnée Prochaine"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:49
 msgid "_Clear Start Date"
-msgstr ""
+msgstr "_Effacer date de début"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "Set Due Date"
-msgstr ""
+msgstr "Assigner une date d'échéance"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
@@ -637,7 +655,7 @@ msgstr "_Effacer date d'échéance"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "Modify Tags..."
-msgstr ""
+msgstr "Modifier les étiquettes..."
 
 #: GTG/gtk/browser/tag_context_menu.py:58
 msgid "Edit Tag..."
@@ -1047,6 +1065,8 @@ msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
+"%s semble être installé sur votre système, mais n'apporte pas l'interface "
+"DBus requise par le plugin Tomboy/Gnote dans GTG."
 
 #: GTG/plugins/tomboy/tomboy.py:243
 msgid "That note does not exist!"
@@ -1060,7 +1080,7 @@ msgstr "Cette note n'existe pas. Voulez-vous la créer ?"
 msgid ""
 "This Tomboy note                                        does not exist "
 "anymore. Do you want to                                        create it?"
-msgstr ""
+msgstr "Cette note Tomboy n'existe plus. Souhaitez-vous la créer?"
 
 #: GTG/gtg.py:85
 msgid "gtg is already running!"
@@ -1072,7 +1092,7 @@ msgstr "Tâches sans étiquettes"
 
 #: GTG/core/search.py:87
 msgid "not"
-msgstr ""
+msgstr "pas"
 
 #: GTG/core/search.py:88
 msgid "or"
